--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
     "yarn": "^1.22.17"
